--- a/normalize.css
+++ b/normalize.css
@@ -20,11 +20,6 @@ html {
  * Remove the margin in all browsers.
  */
 
-body {
-  margin: 0;
-
-}
-
 /**
  * Render the `main` element consistently in IE.
  */
@@ -32,9 +27,6 @@ body {
 main {
   display: block;
 }
-
-
-
 
 /* Grouping content
    ========================================================================== */
@@ -168,7 +160,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -178,7 +171,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
