--- a/styles/main.css
+++ b/styles/main.css
@@ -65,11 +65,38 @@ footer {
     align-items: stretch;
     justify-content: flex-start;
   }
+  .slider {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+  }
+  .slider .slider-description {
+    width: 40%;
+    box-sizing: border-box;
+    padding: 1rem 2rem;
+  }
+  .slider .slider-description p,
+  .slider .slider-description .call-to-action {
+    display: block;
+  }
+  .call-to-action button,
+  .call-to-action small {
+    display: block;
+    text-align: center;
+  }
+  .call-to-action small {
+    color: #6a6a6a;
+  }
+  .slider .swiper-container {
+    display: flex;
+    flex: 1;
+    width: 60%;
+  }
 
   nav.menu {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 3rem;
   }
 
@@ -103,7 +130,14 @@ footer {
     align-items: stretch;
     justify-content: flex-start;
   }
-
+  .call-to-action button,
+  .call-to-action small {
+    display: block;
+    text-align: center;
+  }
+  .call-to-action small {
+    color: #6a6a6a;
+  }
   header .logo {
     display: block;
     margin: auto;
@@ -146,7 +180,14 @@ footer {
   header .logo {
     width: 100%;
   }
-
+  .call-to-action button,
+  .call-to-action small {
+    display: block;
+    text-align: center;
+  }
+  .call-to-action small {
+    color: #6a6a6a;
+  }
   section {
     padding: 0.5rem;
     font-size: 1rem;
