--- a/styles/main.css
+++ b/styles/main.css
@@ -264,6 +264,9 @@ footer {
   }
 }
 @media (min-width: 360px) and (max-width: 768px) {
+  h1 {
+    font-size: 1.5rem;
+  }
   body {
     margin: 20px;
   }
@@ -335,12 +338,16 @@ footer {
 }
 
 @media (min-width: 240px) and (max-width: 360px) {
+  h1 {
+    font-size: 2rem;
+  }
   body {
     margin: 0.3rem;
   }
   .main-photo {
     width: 100%;
   }
+
   header {
     position: relative;
   }
